# Comptext

./: .gitignore  AGENTS.md  CODEX_START_PROMPT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  START_HERE.md  pyproject.toml
.agents/: README.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-hf-space.yml
comptext-tui/: README.md  package-lock.json  package.json  tsconfig.json
comptext-tui/demo/: comptext-tui-demo.tape
comptext-tui/docs/: cli-contract.md  panel-tui-roadmap.md  verification-report.md
comptext-tui/src/: cli.tsx
docs/: AGENT_SYSTEM.md  ANTIGRAVITY_CLI_WORKFLOW.md  CODEX_DESKTOP_PROMPTS.md  CODEX_DESKTOP_WORKFLOW.md  CODEX_LOCAL_AUTONOMY.md  CODEX_WORKFLOW.md  COMPTEXT_ARCHITECTURE_v1.md  COMPTEXT_GATEWAY.md  COMPTEXT_MVP.md  COMPTEXT_MVP_TASKS.md  COMPTEXT_PLUGIN_SYSTEM.md  COMPTEXT_SECURITY.md  COMPTEXT_SKILLS.md  CONTEXT_AND_MEMORY.md  HOOKS_SYSTEM.md  LOCAL_V0_WORKSPACE_README.md  PLUGIN_SYSTEM.md  README_COMMUNITY_REFRESH_PLAN.md  REPOSITORY_STRATEGY.md  SKILLS_SYSTEM.md  SUBAGENTS.md  SUBAGENTS_SYSTEM.md
examples/air/: sample-air-plan.json
examples/provider/: provider-registry-sample.json
examples/run/: sample-run-record.json
examples/workspace/: evidence-chain.sample.json  evidence-event.sample.json  evidence-state-log-entry.sample.json  evidence-state-log.sample.json  reflection-gate.sample.json  workspace-delta.sample.json  workspace-snapshot.sample.json
hf_space/: .deploy-trigger  README.md  app.py  benchmark_cases.json  compression.py  metrics.py  previews.py  protected_segments.py  requirements.txt  safety_checks.py  universe.py
schemas/: evidence-event.v0.schema.json  evidence-state-log-entry.v0.schema.json  evidence-state-log.v0.schema.json  plugin.schema.json  provider-registry.schema.json  reflection-gate.v0.schema.json  skill.schema.json  workspace-delta.v0.schema.json  workspace-snapshot.v0.schema.json
skills/: README.md
tasks/: 00_bootstrap_repo.md  01_local_dry_run_mvp.md
tests/: conftest.py  test_secret_redaction_safety.py
(+114 files in other folders)
