[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comptext"
version = "0.0.0"
description = "Local dry-run scaffold for CompText."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
comptext = "modules.cli.cli_entrypoint:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
