[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comptext"
version = "0.1.0"
description = "Local dry-run developer preview for CompText AI orchestration."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = [
    "comptext",
    "ai-orchestration",
    "developer-tools",
    "dry-run",
    "evidence-chain",
    "local-first"
]
dependencies = [
    "textual>=0.50.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "build>=1.2"
]

[project.scripts]
comptext = "modules.cli.cli_entrypoint:main"

[tool.setuptools.packages.find]
include = ["modules*"]
